--- a/index.html
+++ b/index.html
@@ -38,12 +38,36 @@
         </div>
 
         <div class = "col-md-6">
-          <div id = "show-contact">
+          <div id="contact-display">
             <h2></h2>
 
-            <p>First name: <span class = "first-name"></span></p>
-            <p>Last name: <span class = "last-name"></span></p>
-            <p>Address: <span class = "address"></span></p>
+            <p>First name: <span id="existing-first-name"></span></p>
+            <p>Last name: <span id="existing-last-name"></span></p>
+            <p>Address: <span id="existing-address"></span></p>
+
+            <button class="btn btn-primary" id="update-button">Update Contact</button>
+          </div>
+
+          <div id = "update-contact">
+            <h2></h2>
+
+            <form id="edit-contact">
+
+              <div class="form-group">
+                <label for="edit-first-name">First name</label>
+                <input type="text" class="form-control" id="edit-first-name">
+              </div>
+              <div class="form-group">
+                <label for="edit-last-name">Last name</label>
+                <input type="text" class="form-control" id="edit-last-name">
+              </div>
+              <div class="form-group">
+                <label for="edit-address">Address</label>
+                <input type="text" class="form-control" id="edit-address">
+              </div>
+
+              <button type="submit" class="btn">Edit</button>
+            </form>
           </div>
         </div>
 
