--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <input type="text" class="form-control" id="new-address">
             </div>
 
-            <button type="submit" class="btn">Add</button>
+            <button type="submit" class="btn btn-primary">Add</button>
           </form>
 
           <h2>Contacts:</h2>
@@ -45,7 +45,7 @@
             <p>Last name: <span id="existing-last-name"></span></p>
             <p>Address: <span id="existing-address"></span></p>
 
-            <button class="btn btn-primary" id="update-button">Update Contact</button>
+            <button class="btn btn-primary" id="update-button">Edit</button>
           </div>
 
           <div id = "update-contact">
@@ -66,7 +66,7 @@
                 <input type="text" class="form-control" id="edit-address">
               </div>
 
-              <button type="submit" class="btn">Edit</button>
+              <button type="submit" class="btn btn-primary">Update Contact</button>
             </form>
           </div>
         </div>
